@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST nvidiabl-0.69-source-only.dkms.tar.gz 11029 RMD160 8de2dff28b4326316b704f4397ac9013687a8c25 SHA1 8f6c1cbacb4cc54cdab0346fbee4132b55993482 SHA256 e1f29bb9b398afe9004ef8745a82ce985a25aff2d43e0582c6282d2055fc2347
+DIST nvidiabl-0.70-source-only.dkms.tar.gz 11160 RMD160 0af92f6d6b8fc077ac386289960d36e125f19804 SHA1 938a191f4e86538064546e236a066a0643a1496b SHA256 c1be8aa5e94300799bc27062efcd0410fc7ac4e0addf4d8259a942148d307b33
 EBUILD nvidiabl-0.69.ebuild 744 RMD160 42a4514d38f1487f47c69ce358c975bd2b9c19de SHA1 822b3bd0b723f57fe806b971c4b5c8d8ba7fd96c SHA256 25880da60caf2f4b230fcff710e407c8ad3ed1c2366966f5c76c022218482957
-MISC ChangeLog 668 RMD160 db426fa701143735e79e822c81ccaf7e193626dc SHA1 eeabb02603ddd03c3ef3b75e514df4a882e3817b SHA256 44d9b4409882b0fcd71b31f230fd96368a4ac824023d088b9ff9f507542423d6
+EBUILD nvidiabl-0.70.ebuild 744 RMD160 ed66de8d55254ab53a54932e2dacfaa4f22c3551 SHA1 36bcd323c354f0301e65450c8edb88cb5661e719 SHA256 721570a3b23ced53f842fbe27e9e839a6f01ccf7bd696aad124d035da0e026a3
+MISC ChangeLog 789 RMD160 3b3500957abcd767899e47484a8b75ad1ef5aa07 SHA1 a0f41ba0ddb720e63b57997c6ebea220fba47162 SHA256 8ea6dc6016ef953725135466f04cf32f583717be247e761d940689b1dcf98605
 MISC metadata.xml 257 RMD160 f829d1fd5c7ca4e9d680bd6a67ba7647e76e5850 SHA1 924504f4034f31fe01bc6cb5619456d4e33093c0 SHA256 46b055aefb12327935fd54c8ea02edb10100d8f860d2ca581ded422b258b5f97
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk28LLsACgkQmWq1bYTyC0NN/wEApuL8OrvJk2K3QFTFH7KRGAQv
-auxI7UqHR71lfzqGcbkA/2wUKsPi2/atAzQwnqDKXcw3hUt1wBRp74b1STTw1gmf
-=vZ2H
+iF4EAREIAAYFAk4lzrIACgkQmWq1bYTyC0M2UAEAnD5JBwWDsNkfoRMAyev3qslo
+xSlFIxrWd3hU7mUW6CMA/Rkg486HTqLCL3M/DoZsYGWwJhI0QfhHeLJiJ386L8a6
+=Jrki
 -----END PGP SIGNATURE-----
