@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/nvidiabl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.4 2011/04/30 15:37:40 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.5 2011/07/19 18:36:33 angelos Exp $
+
+*nvidiabl-0.70 (19 Jul 2011)
+
+  19 Jul 2011; Christoph Mende <angelos@gentoo.org> +nvidiabl-0.70.ebuild:
+  Version bump
 
   30 Apr 2011; Christoph Mende <angelos@gentoo.org> -nvidiabl-0.67.ebuild:
   Remove old
